2005-12-18  Stefan Jahn  <stefan@lkcc.org>

	* qucs_producer.cpp: Allow new temperature and area parameters
	of devices to be converted.

2005-12-12  Stefan Jahn  <stefan@lkcc.org>

	* qucs_producer.cpp: Added new temperature and area
	parameters for QucsLib output of diodes.

	* parse_spice.y: Allowing translation of area parameter.

2005-12-10  Stefan Jahn  <stefan@lkcc.org>

	* qucs_producer.cpp: Using new hash template to increase
	speed during spice node list creation.

2005-11-12  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Fixed diode node translation.  Implemented
	translation of three mutual inductors.

2005-10-13  Stefan Jahn  <stefan@lkcc.org>

	* qucs_producer.cpp: Redefined 'qucslib' output format to
	accord to the library manager data format.

2005-06-10  Stefan Jahn  <stefan@lkcc.org>

	* scan_spice.l: Skipping the .control -> .endc interactive
	section in SPICE files.  Also handling the optional 0x1a
	character at the end of SPICE netlists.

2005-05-25  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Fixed a segfault bug occurring if there is
	an untranslatable device model.

2005-05-15  Stefan Jahn  <stefan@lkcc.org>

	* qucs_producer.cpp (qucslib_producer): New producer in the
	converter tool implemented.  It outputs templates for device
	models for diode, jfet, mosfet and bjt including a symbol.
	The functionality can be used in future for device libraries.

	* check_spice.cpp: The spice checker now also collects the
	available .MODEL statements.

2005-04-30  Stefan Jahn  <stefan@lkcc.org>

	* qucs_producer.cpp: Fixed reference node implementation in
	order to pull the ground node outside the circuit definition
	througout the subcircuits in the original netlist.

2005-04-27  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Collecting potential external and overall
	nodes in the netlist.

	* qucs_producer.cpp: Printing node lists as comments.

	* qucsconv.cpp: Added new command line option '-g' which can